About Page Update
Updated about page with general information

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ p1 {
 
 h1 {
     text-align: center;
-    font-family: Georgia;
+    font-family: Courier New;
     font-weight: lighter;
     font-size: 2.5vw;
 }
