Update Resource Page
Resource page is updated with list of resources

--- a/public/style.css
+++ b/public/style.css
@@ -73,7 +73,7 @@ h1 {
 }
 
 .headerImage {
-    opacity: .5;
+    opacity: .3;
 }
 
 /* Style the button that is used to open and close the collapsible content */
@@ -127,4 +127,52 @@ h1 {
     margin-right: 2vw;
     margin-bottom: 3vw;
     margin-top: 1vw;
+}
+
+
+/*Resources Page List Formatting*/
+.list {
+width:45vw;
+margin:auto;
+}
+
+.list ol{
+counter-reset: li;
+list-style: none;
+*list-style: decimal;
+font-size: 25px;
+font-family: 'Courier New';
+}
+
+.list a{
+position: relative;
+display: block;
+padding: .4em .4em .4em 2em;
+*padding: .4em;
+margin: .5em 0;
+background: #FC756F;
+color: #444;
+transition: all .2s ease-in-out;
+}
+
+.list a:hover{
+background: #d6d4d4;
+transform: scale(1.1);
+}
+
+.list a:before{
+content: counter(li);
+counter-increment: li;
+position: absolute;
+left: -1.3em;
+top: 50%;
+margin-top: -1.3em;
+background:#FC756F;
+height: 2em;
+width: 2em;
+line-height: 2em;
+border: .3em solid #fff;
+text-align: center;
+font-weight: bold;
+color:#FFF;
 }
