--- a/public/style.css
+++ b/public/style.css
@@ -68,7 +68,7 @@ h1 {
 
 
 /* Container holding the header image and the text */
-.container {
+.headerDisplay {
   position: relative;
   text-align: center;
   color: white;
@@ -89,6 +89,29 @@ h1 {
 .headerImage {
     opacity: .4;
 }
+
+.container1 {
+  background-color: rgb(255, 244, 245);
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.container2 {
+  background-color: rgb(255, 244, 245);
+  padding: 20px;
+  display: flex;
+}
+
+.description {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.pic {
+  border-radius: 15px;
+}
+
 
 #padRequestButton {
   font-size: 1vw;
@@ -144,21 +167,6 @@ h1 {
     margin-bottom: 3vw;
 }
 
-.aboutimg1 {
-    float: left;
-    margin-left: 5vw;
-    margin-right: 2vw;
-    margin-bottom: 3vw;
-    margin-top: 1vw;
-}
-
-.aboutimg2 {
-    float: right;
-    margin-left: 2vw;
-    margin-right: 5vw;
-    margin-bottom: 3vw;
-    margin-top: 1vw;
-}
 
 .genAboutLeft {
     margin-left: 5vw;
