fix header display style

--- a/public/style.css
+++ b/public/style.css
@@ -48,7 +48,7 @@ h1 {
     text-align: center;
     display: inline-block;
     font-size: 16px;
-    font-family: Arial;
+    font-family: Open Sans;
     float: right;
     font-size: 1.25vw;
 }
